[gd_scene load_steps=13 format=3 uid="uid://b1x6pou8l113t"]

[ext_resource type="PackedScene" uid="uid://csw0n7r56ltg8" path="res://scenes/enemies/inherit/enemy_base.tscn" id="1_eof8q"]
[ext_resource type="Script" path="res://scripts/ememies/nim.gd" id="2_e00os"]
[ext_resource type="Texture2D" uid="uid://bw8i8ildpmbw4" path="res://assest/enemies/nim.png" id="2_rf1me"]
[ext_resource type="Shader" path="res://shader/player.gdshader" id="3_h0hyi"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qsayn"]
shader = ExtResource("3_h0hyi")
shader_parameter/color_opacity = 0.0
shader_parameter/main_color = Color(1, 0.160784, 0.215686, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_mmm12"]
atlas = ExtResource("2_rf1me")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nup55"]
atlas = ExtResource("2_rf1me")
region = Rect2(16, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_tuuvc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mmm12")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nup55")
}],
"loop": true,
"name": &"default",
"speed": 1.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nk22i"]
size = Vector2(13, 10)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_brc1q"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kisle"]
bg_color = Color(1, 0, 0.113725, 1)

[sub_resource type="LabelSettings" id="LabelSettings_g02wi"]
font_size = 7

[node name="nim" instance=ExtResource("1_eof8q")]
script = ExtResource("2_e00os")
max_health = 15
speed = 30

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." index="2"]
texture_filter = 1
material = SubResource("ShaderMaterial_qsayn")
sprite_frames = SubResource("SpriteFrames_tuuvc")
frame_progress = 0.110431

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="3"]
position = Vector2(-0.5, 1)
shape = SubResource("RectangleShape2D_nk22i")

[node name="RayCast2D" type="RayCast2D" parent="." index="4"]
target_position = Vector2(-10, 0)
collision_mask = 4

[node name="healthbar" type="ProgressBar" parent="." index="5"]
visible = false
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = -6.0
theme_override_styles/background = SubResource("StyleBoxEmpty_brc1q")
theme_override_styles/fill = SubResource("StyleBoxFlat_kisle")
value = 100.0
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="healthbar" index="0"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -11.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
text = "5/5"
label_settings = SubResource("LabelSettings_g02wi")
horizontal_alignment = 1
vertical_alignment = 2

[node name="PlayerDetect" type="RayCast2D" parent="." index="6"]
position = Vector2(3, 0)
target_position = Vector2(0, 180)
collide_with_areas = true
collide_with_bodies = false

[node name="bullet_holder" type="Node" parent="." index="7"]

[node name="shoot_timer" type="Timer" parent="." index="8"]
wait_time = 2.0

[node name="explosion" parent="." index="9"]
position = Vector2(-1, 1)

[connection signal="timeout" from="shoot_timer" to="." method="_on_shoot_timer_timeout"]
